--- a/src/main/resources/templates/fragments/topbar.html
+++ b/src/main/resources/templates/fragments/topbar.html
@@ -34,7 +34,7 @@
          <li><a href="/billingsuperadmin"
                 th:classappend="${#httpServletRequest.requestURI == '/billingsuperadmin'}"
                 th:if="${session.subscription != null && session.subscription.status.superAdmin == True && session.subscription.stop == 0}">Paiement</a></li>
-        <li> <a href="/logout"
+        <li> <a href="/profile"
                 th:classappend="${#httpServletRequest.requestURI == '/profile'}"
                 th:if="${session.subscription != null}">Profile</a></li>
         <li> <a href="/logout"
